# NekoOnline

./: CMakeLists.txt
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  iniparser.cpp  iniparser.h  matrixd.cpp  matrixd.h  network_codes.h  rand.cpp  rand.h  settings.cpp  settings.h  util.h
src/client/: CMakeLists.txt  ClientMain.cpp  ClientNetwork.cpp  ClientNetwork.h  Pet.cpp  Pet.h  Sprite.cpp  Sprite.h  animation.cpp  animation.h  bitmap.cpp  bitmap.h  client_settings.h  timer.h
src/server/: ServerMain.cpp  channel.cpp  channel.h  channel_manager.cpp  channel_manager.h  server_settings.h
